set up Okteto CLI
fully qualify image ref, support okteto up --build
Instant remote sync directory temporary service volume 👍

You still have to run `kubectl apply -f k8s.yml` first, but `okteto up
--build` will build the source code into a new image, and overwrite it
with your latest from the current working directory.

--- a/okteto.yml
+++ b/okteto.yml
@@ -6,3 +6,7 @@ sync:
 - www:/var/www/html
 forward:
 - 8080:80
+image:
+  name: okteto.dev/supervisord-nginx:latest
+  context: .
+  dockerfile: Dockerfile
