--- a/k8s.yml
+++ b/k8s.yml
@@ -13,7 +13,7 @@ spec:
         app: supervisord
     spec:
       containers:
-      - image: okteto/supervisord-nginx
+      - image: okteto.dev/supervisord-nginx:latest
         name: supervisord
 
 ---
