--- a/k8s.yml
+++ b/k8s.yml
@@ -13,7 +13,7 @@ spec:
         app: supervisord
     spec:
       containers:
-      - image: okteto.dev/supervisord-nginx:latest
+      - image: docker.io/kingdonb/supervisord-nginx:b8e28dce
         name: supervisord
 
 ---
