--- a/www/package.json
+++ b/www/package.json
@@ -8,13 +8,12 @@
     "parcel": "^2.0.1"
   },
   "dependencies": {
-    "@hotwired/stimulus": "^3.0.1",
     "d3": "^7.2.0",
     "esri-leaflet": "^3.0.4",
     "esri-leaflet-vector": "^3.1.1",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
-    "materialize-css": "^1.0.0",
-    "stimulus-use": "^0.50.0-2"
+    "lit": "^2.0.2",
+    "materialize-css": "^1.0.0"
   }
 }
