--- a/www/package.json
+++ b/www/package.json
@@ -4,6 +4,8 @@
   "license": "Apache-2.0",
   "author": "Juozas Gaigalas",
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.16.5",
+    "@babel/plugin-proposal-decorators": "^7.16.5",
     "@parcel/transformer-sass": "^2.0.1",
     "parcel": "^2.0.1"
   },
