--- a/www/package.json
+++ b/www/package.json
@@ -3,11 +3,17 @@
   "description": "Interactive web application to visualize scientific monitoring data for St. Joseph's River",
   "license": "Apache-2.0",
   "author": "Juozas Gaigalas",
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "staticFiles": {
+    "staticPath": "public",
+    "watcherGlob": "**"
+  },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.5",
     "@babel/plugin-proposal-decorators": "^7.16.5",
     "@parcel/transformer-sass": "^2.0.1",
-    "parcel": "^2.0.1"
+    "parcel": "^2.0.1",
+    "parcel-plugin-static-files-copy": "^2.6.0"
   },
   "dependencies": {
     "d3": "^7.2.0",
