--- a/www/package.json
+++ b/www/package.json
@@ -4,18 +4,15 @@
   "license": "Apache-2.0",
   "author": "Juozas Gaigalas",
   "browserslist": "> 0.5%, last 2 versions, not dead",
-  "staticFiles": {
-    "staticPath": "public",
-    "watcherGlob": "**"
-  },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.5",
     "@babel/plugin-proposal-decorators": "^7.16.5",
     "@parcel/transformer-sass": "^2.0.1",
     "parcel": "^2.0.1",
-    "parcel-plugin-static-files-copy": "^2.6.0"
+    "parcel-reporter-static-files-copy": "^1.3.4"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0-0",
     "d3": "^7.2.0",
     "esri-leaflet": "^3.0.4",
     "esri-leaflet-vector": "^3.1.1",
