--- a/www/package.json
+++ b/www/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.0.0-0",
+    "air-datepicker": "^3.1.0",
     "d3": "^7.2.0",
     "esri-leaflet": "^3.0.4",
     "esri-leaflet-vector": "^3.1.1",
