--- a/www/package.json
+++ b/www/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "lit": "^2.0.2",
-    "materialize-css": "^1.0.0"
+    "materialize-css": "^1.0.0",
+    "tippy.js": "^6.3.7"
   }
 }
