--- a/www/package.json
+++ b/www/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babel/core": "^7.0.0-0",
     "air-datepicker": "^3.1.0",
+    "babel-plugin-disable-parcel-hmr": "file:./vendor/babel-plugin-disable-parcel-hmr",
     "d3": "^7.2.0",
     "esri-leaflet": "^3.0.4",
     "esri-leaflet-vector": "^3.1.1",
