--- a/www/package.json
+++ b/www/package.json
@@ -22,6 +22,7 @@
     "leaflet": "^1.7.1",
     "lit": "^2.0.2",
     "materialize-css": "^1.0.0",
+    "papaparse": "^5.3.1",
     "plotly": "^1.0.6",
     "seedrandom": "~2.4.3",
     "timezone-abbr-offsets": "^1.0.2",
