--- a/www/package.json
+++ b/www/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "lit": "^2.0.2",
+    "lodash": "^4.17.21",
     "materialize-css": "^1.0.0",
     "papaparse": "^5.3.1",
     "plotly": "^1.0.6",
