--- a/www/package.json
+++ b/www/package.json
@@ -19,6 +19,7 @@
     "esri-leaflet": "^3.0.4",
     "esri-leaflet-vector": "^3.1.1",
     "jquery": "^3.6.0",
+    "katex": "^0.15.1",
     "leaflet": "^1.7.1",
     "lit": "^2.0.2",
     "lodash": "^4.17.21",
