--- a/www/package.json
+++ b/www/package.json
@@ -26,6 +26,7 @@
     "materialize-css": "^1.0.0",
     "papaparse": "^5.3.1",
     "plotly": "^1.0.6",
+    "plotly.js-dist": "^2.8.3",
     "seedrandom": "~2.4.3",
     "timezone-abbr-offsets": "^1.0.2",
     "tippy.js": "^6.3.7"
