--- a/www/package.json
+++ b/www/package.json
@@ -22,6 +22,7 @@
     "katex": "^0.15.1",
     "leaflet": "^1.7.1",
     "lit": "^2.0.2",
+    "lit-element-state": "^1.7.0",
     "lodash": "^4.17.21",
     "materialize-css": "^1.0.0",
     "papaparse": "^5.3.1",
